--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
-    background-color: #1f2937 ;
     font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.first-block {
+   background-color: #1f2937 ;
+}
 
 .header {
     
-    padding:32px; 
+    padding:24px; 
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -35,11 +37,13 @@ a {
     font-size: 48px;
     font-weight: 1000;
     color: #f9faf8;
+    margin-bottom: 16px;
  }
 
  .hero-body {
     font-size: 18px;
     color: #e5e7eb;
+    margin-bottom: 16px;
  }
 
  .button-1 {
@@ -85,22 +89,89 @@ a {
  .images {
    display: flex;
    justify-content: space-around;
+
  
  }
 
  .texts {
    display: flex;
    justify-content: space-around;
+
  }
 
  img {
    height: 200px;
    width: 200px;
-   border-radius: 50%;
+   border-radius: 10px;
  }
 
  p {
-   height: 200px;
+   height: 100px;
    width: 200px;
    text-align: center;
+ }
+
+ .third-block {
+   background-color: #e5e7eb;
+   padding: 150px;
+
+ }
+
+ .quote {
+   font-size: 36px;
+   font-style: italic;;
+   color: #1f2937;
+ }
+
+ .author {
+   font-size: 24px;
+   color: #1f2937;
+   font-weight: 700;
+   display: flex;
+   justify-content: end;
+ }
+
+ .fourth-block {
+   background-color: #f9faf8;
+   padding: 100px;
+
+ }
+
+ .form {
+   background-color: #3882f6;
+   padding: 32px;
+   border-radius: 10px;
+ }
+
+ .button-2 {
+   background-color: #3882f6;
+   padding: 4px 16px 4px 16px;
+   border-radius: 8px;
+   border-style: solid;
+   border-color: #e5e7eb;
+   font-size: 18px;
+   color: #e5e7eb; 
+ }
+
+ .call {
+   font-size: 24px;
+   font-weight: 600;
+   color: #f9faf8;
+ }
+
+ .info {
+   color: #f9faf8;
+ }
+
+ .form {
+   display: flex;
+   justify-content: space-around;
+ }
+
+ .footer {
+   color: #f9faf8;
+   background-color: #1f2937;
+   padding: 24px;
+   text-align: center;
+   font-style: italic;
  }
