Fix placeholder margins to 24px

--- a/style.css
+++ b/style.css
@@ -63,9 +63,11 @@ a {
  }
 
  .placeholder {
-    background-color: aquamarine;
+    background-color: #f9faf8;
     padding: 32px;
+   margin: 32px;
     width: 50%;
+
 
  }
 
