--- a/style.css
+++ b/style.css
@@ -57,22 +57,26 @@ a {
 
  .container {
     
-    padding: 32px;
+    padding: 24px;
     width: 50%;
 
  }
 
  .placeholder {
-    background-color: #f9faf8;
-    padding: 32px;
-    margin: 32px;
+  
+    margin: 24px;
     width: 50%;
 
+ }
 
+ #placeholder {
+  min-width: 100%;
+  min-height: 100%;
  }
 
  .content {
     display: flex;
+    justify-content: space-between;
 
  }
 
